--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,3 +19,4 @@ importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(methods,setMethod)
 importFrom(methods,signature)
+importFrom(stats,na.omit)
